--- a/DBI.Web.EMS/DBI.Web.EMS.csproj
+++ b/DBI.Web.EMS/DBI.Web.EMS.csproj
@@ -144,6 +144,11 @@
     <Content Include="Resources\Images\wwbnight.png" />
     <Content Include="Resources\Scripts\jquery-2.0.1.js" />
     <Content Include="Resources\Scripts\jquery-2.0.1.min.js" />
+    <Content Include="Views\Modules\BudgetBidding\Reports\umRepRollupOPCompare.aspx" />
+    <Content Include="Views\Modules\BudgetBidding\umReportCompareTo.aspx" />
+    <Content Include="Views\Modules\BudgetBidding\Reports\umRepRollupOHCompare.aspx" />
+    <Content Include="Views\Modules\BudgetBidding\Reports\umRepOrgLiabilities.aspx" />
+    <Content Include="Views\Modules\BudgetBidding\Reports\umRepOrgComments.aspx" />
     <Content Include="Views\Modules\BudgetBidding\Reports\umRepOrgAllProjects.aspx" />
     <Content Include="Views\Modules\BudgetBidding\Reports\umRepRollupSum.aspx" />
     <Content Include="Views\Modules\BudgetBidding\Reports\umRepDetailSheet.aspx" />
@@ -319,6 +324,41 @@
     </Compile>
     <Compile Include="Views\Handlers\SystemUsers.ashx.cs">
       <DependentUpon>SystemUsers.ashx</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Modules\BudgetBidding\Reports\umRepRollupOPCompare.aspx.cs">
+      <DependentUpon>umRepRollupOPCompare.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Views\Modules\BudgetBidding\Reports\umRepRollupOPCompare.aspx.designer.cs">
+      <DependentUpon>umRepRollupOPCompare.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Modules\BudgetBidding\umReportCompareTo.aspx.cs">
+      <DependentUpon>umReportCompareTo.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Views\Modules\BudgetBidding\umReportCompareTo.aspx.designer.cs">
+      <DependentUpon>umReportCompareTo.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Modules\BudgetBidding\Reports\umRepRollupOHCompare.aspx.cs">
+      <DependentUpon>umRepRollupOHCompare.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Views\Modules\BudgetBidding\Reports\umRepRollupOHCompare.aspx.designer.cs">
+      <DependentUpon>umRepRollupOHCompare.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Modules\BudgetBidding\Reports\umRepOrgLiabilities.aspx.cs">
+      <DependentUpon>umRepOrgLiabilities.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Views\Modules\BudgetBidding\Reports\umRepOrgLiabilities.aspx.designer.cs">
+      <DependentUpon>umRepOrgLiabilities.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Modules\BudgetBidding\Reports\umRepOrgComments.aspx.cs">
+      <DependentUpon>umRepOrgComments.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Views\Modules\BudgetBidding\Reports\umRepOrgComments.aspx.designer.cs">
+      <DependentUpon>umRepOrgComments.aspx</DependentUpon>
     </Compile>
     <Compile Include="Views\Modules\BudgetBidding\Reports\umRepOrgAllProjects.aspx.cs">
       <DependentUpon>umRepOrgAllProjects.aspx</DependentUpon>
@@ -1229,6 +1269,18 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Views\Modules\BudgetBidding\Reports\umRepOrgAllProjects.rdlc">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Views\Modules\BudgetBidding\Reports\umRepOrgComments.rdlc">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Views\Modules\BudgetBidding\Reports\umRepOrgLiabilities.rdlc">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Views\Modules\BudgetBidding\Reports\umRepRollupOHCompare.rdlc">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Views\Modules\BudgetBidding\Reports\umRepRollupOPCompare.rdlc">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <EmbeddedResource Include="Views\Modules\CrossingMaintenance\Reports\MaintenanceInvoiceReport.rdlc" />
