--- a/DBI.Web.EMS/DBI.Web.EMS.csproj
+++ b/DBI.Web.EMS/DBI.Web.EMS.csproj
@@ -1326,7 +1326,8 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Views\Modules\BudgetBidding\Reports\umRepProject.rdlc">
-    </EmbeddedResource>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <EmbeddedResource Include="Views\Modules\CrossingMaintenance\Reports\StateCrossingListReport.rdlc" />
     <Content Include="Views\Modules\BudgetBidding\Reports\ProjectDetail.rdlc">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
