--- a/DBI.Web.EMS/DBI.Web.EMS.csproj
+++ b/DBI.Web.EMS/DBI.Web.EMS.csproj
@@ -211,9 +211,9 @@
     <Content Include="Views\Modules\CrossingMaintenance\umViewCrossings.aspx" />
     <Content Include="Views\Modules\CrossingMaintenance\umWeeklyWorkActivity.aspx" />
     <Content Include="Views\Modules\CustomerSurveys\umCopyExisting.aspx" />
+    <Content Include="Views\Modules\CustomerSurveys\umEditFormTarget.aspx" />
     <Content Include="Views\Modules\CustomerSurveys\umManageForms.aspx" />
     <Content Include="Views\Modules\CustomerSurveys\umManageOrgs.aspx" />
-    <Content Include="Views\Modules\CustomerSurveys\umQuestionCategories.aspx" />
     <Content Include="Views\Modules\CustomerSurveys\umSurveyCategories.aspx" />
     <Content Include="Views\Modules\CustomerSurveys\umSurveyDashboard.aspx" />
     <Content Include="Views\Modules\CustomerSurveys\umViewCompleted.aspx" />
@@ -789,6 +789,13 @@
     <Compile Include="Views\Modules\CustomerSurveys\umCopyExisting.aspx.designer.cs">
       <DependentUpon>umCopyExisting.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Views\Modules\CustomerSurveys\umEditFormTarget.aspx.cs">
+      <DependentUpon>umEditFormTarget.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Views\Modules\CustomerSurveys\umEditFormTarget.aspx.designer.cs">
+      <DependentUpon>umEditFormTarget.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Views\Modules\CustomerSurveys\umManageForms.aspx.cs">
       <DependentUpon>umManageForms.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -802,13 +809,6 @@
     </Compile>
     <Compile Include="Views\Modules\CustomerSurveys\umManageOrgs.aspx.designer.cs">
       <DependentUpon>umManageOrgs.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="Views\Modules\CustomerSurveys\umQuestionCategories.aspx.cs">
-      <DependentUpon>umQuestionCategories.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Views\Modules\CustomerSurveys\umQuestionCategories.aspx.designer.cs">
-      <DependentUpon>umQuestionCategories.aspx</DependentUpon>
     </Compile>
     <Compile Include="Views\Modules\CustomerSurveys\umSurveyCategories.aspx.cs">
       <DependentUpon>umSurveyCategories.aspx</DependentUpon>
