--- a/DBI.Web.EMS/DBI.Web.EMS.csproj
+++ b/DBI.Web.EMS/DBI.Web.EMS.csproj
@@ -210,14 +210,14 @@
     <Content Include="Views\Modules\CrossingMaintenance\umSupplementalBilling.aspx" />
     <Content Include="Views\Modules\CrossingMaintenance\umViewCrossings.aspx" />
     <Content Include="Views\Modules\CrossingMaintenance\umWeeklyWorkActivity.aspx" />
-    <Content Include="Views\Modules\CustomerSurveys\umCopyExisting.aspx" />
+    <Content Include="Views\Modules\FormGenerator\umCopyExisting.aspx" />
     <Content Include="Views\Modules\CustomerSurveys\umEditFormTarget.aspx" />
-    <Content Include="Views\Modules\CustomerSurveys\umManageForms.aspx" />
+    <Content Include="Views\Modules\FormGenerator\umManageForms.aspx" />
     <Content Include="Views\Modules\CustomerSurveys\umManageOrgs.aspx" />
     <Content Include="Views\Modules\CustomerSurveys\umSurveyCategories.aspx" />
     <Content Include="Views\Modules\CustomerSurveys\umSurveyDashboard.aspx" />
     <Content Include="Views\Modules\CustomerSurveys\umViewCompleted.aspx" />
-    <Content Include="Views\Modules\CustomerSurveys\umViewSurvey.aspx" />
+    <Content Include="Views\Modules\FormGenerator\umViewSurvey.aspx" />
     <Content Include="Views\Modules\DailyActivity\ImageLoader\ImageLoader.aspx" />
     <Content Include="Views\Modules\DailyActivity\test.aspx" />
     <Content Include="Views\Modules\DailyActivity\umChooseLunchHeader.aspx" />
@@ -782,11 +782,11 @@
     <Compile Include="Views\Modules\CrossingMaintenance\umWeeklyWorkActivity.aspx.designer.cs">
       <DependentUpon>umWeeklyWorkActivity.aspx</DependentUpon>
     </Compile>
-    <Compile Include="Views\Modules\CustomerSurveys\umCopyExisting.aspx.cs">
+    <Compile Include="Views\Modules\FormGenerator\umCopyExisting.aspx.cs">
       <DependentUpon>umCopyExisting.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Views\Modules\CustomerSurveys\umCopyExisting.aspx.designer.cs">
+    <Compile Include="Views\Modules\FormGenerator\umCopyExisting.aspx.designer.cs">
       <DependentUpon>umCopyExisting.aspx</DependentUpon>
     </Compile>
     <Compile Include="Views\Modules\CustomerSurveys\umEditFormTarget.aspx.cs">
@@ -796,11 +796,11 @@
     <Compile Include="Views\Modules\CustomerSurveys\umEditFormTarget.aspx.designer.cs">
       <DependentUpon>umEditFormTarget.aspx</DependentUpon>
     </Compile>
-    <Compile Include="Views\Modules\CustomerSurveys\umManageForms.aspx.cs">
+    <Compile Include="Views\Modules\FormGenerator\umManageForms.aspx.cs">
       <DependentUpon>umManageForms.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Views\Modules\CustomerSurveys\umManageForms.aspx.designer.cs">
+    <Compile Include="Views\Modules\FormGenerator\umManageForms.aspx.designer.cs">
       <DependentUpon>umManageForms.aspx</DependentUpon>
     </Compile>
     <Compile Include="Views\Modules\CustomerSurveys\umManageOrgs.aspx.cs">
@@ -831,11 +831,11 @@
     <Compile Include="Views\Modules\CustomerSurveys\umViewCompleted.aspx.designer.cs">
       <DependentUpon>umViewCompleted.aspx</DependentUpon>
     </Compile>
-    <Compile Include="Views\Modules\CustomerSurveys\umViewSurvey.aspx.cs">
+    <Compile Include="Views\Modules\FormGenerator\umViewSurvey.aspx.cs">
       <DependentUpon>umViewSurvey.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Views\Modules\CustomerSurveys\umViewSurvey.aspx.designer.cs">
+    <Compile Include="Views\Modules\FormGenerator\umViewSurvey.aspx.designer.cs">
       <DependentUpon>umViewSurvey.aspx</DependentUpon>
     </Compile>
     <Compile Include="Views\Modules\DailyActivity\ImageLoader\ImageLoader.aspx.cs">
