--- a/DBI.Web.EMS/DBI.Web.EMS.csproj
+++ b/DBI.Web.EMS/DBI.Web.EMS.csproj
@@ -144,6 +144,7 @@
     <Content Include="Resources\Images\wwbnight.png" />
     <Content Include="Resources\Scripts\jquery-2.0.1.js" />
     <Content Include="Resources\Scripts\jquery-2.0.1.min.js" />
+    <Content Include="Views\Modules\BudgetBidding\umAddEditMonthProject.aspx" />
     <Content Include="Views\Modules\BudgetBidding\umEditMonthRow.aspx" />
     <Content Include="Views\Modules\BudgetBidding\umMonthBudget.aspx" />
     <Content Include="Views\Modules\BudgetBidding\Reports\umRepRollupOPCompare.aspx" />
@@ -328,6 +329,13 @@
     </Compile>
     <Compile Include="Views\Handlers\SystemUsers.ashx.cs">
       <DependentUpon>SystemUsers.ashx</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Modules\BudgetBidding\umAddEditMonthProject.aspx.cs">
+      <DependentUpon>umAddEditMonthProject.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Views\Modules\BudgetBidding\umAddEditMonthProject.aspx.designer.cs">
+      <DependentUpon>umAddEditMonthProject.aspx</DependentUpon>
     </Compile>
     <Compile Include="Views\Modules\BudgetBidding\umEditMonthRow.aspx.cs">
       <DependentUpon>umEditMonthRow.aspx</DependentUpon>
